[gd_scene load_steps=2 format=3 uid="uid://b68oivtm82pwx"]

[ext_resource type="Script" uid="uid://cf7ahvu65kfdd" path="res://mission.gd" id="1_egi7e"]

[node name="mission" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_egi7e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="name" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "NAME"

[node name="HBoxContainer1" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="desc" type="Label" parent="VBoxContainer/HBoxContainer1"]
layout_mode = 2
text = "too long boring description"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="target_1" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "planet 1"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="todo_1" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Погрузите x в свой трюм"

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="target_2" type="Label" parent="VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "planet 2"

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="todo_2" type="Label" parent="VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "передайте что-то там"

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="reward" type="Label" parent="VBoxContainer/HBoxContainer6"]
layout_mode = 2

[node name="HBoxContainer7" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer8" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
